--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM Load Example</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+<script>
+    // Function to be executed when the DOM is loaded
+    function onDOMLoad() {
+        // Create a new paragraph element
+        var paragraph = document.createElement("p");
+        
+        // Set the text content of the paragraph
+        paragraph.textContent = "DOM load success";
+        
+        // Append the paragraph to the body
+        document.body.appendChild(paragraph);
+    }
+
+    // Attach the onDOMLoad function to the DOMContentLoaded event
+    document.addEventListener("DOMContentLoaded", onDOMLoad);
 </script>
 
 </body>
-
 </html>
